# Deep-learning-land-use-classification

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
deep_learning_land_use_classification/: __init__.py  config.py  dataset.py  early_stopping.py  evaluation.py  features.py  plots.py  wanddb_helpers.py
deep_learning_land_use_classification/modeling/: predict.py  train.py
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/: 0.01_multi_label_data_exploration.ipynb  0.02_single_label_data_exploration.ipynb  0.02_wandb.ipynb  3.00_resnet50_with_imagenet.ipynb  3.00_single_label_resnet50_with_imagenet copy.ipynb  3.00_single_label_resnet50_with_imagenet.ipynb  3.00_train_resnet_model.ipynb  3.01_multi_label_ViT.ipynb  3.02_augment_multi_label_resnet50_with_imagenet.ipynb  3.02_multi_label_resnet50_with_imagenet.ipynb  3.03_multi_label_resnet50_with_imagenet.ipynb  3.03_single_label_ViT.ipynb  3.04_single_label_ViT.ipynb  GRS_34806_MGI_Project.ipynb
wandb/wandb/: latest-run
wandb/wandb/run-20260414_103427-bu9j6x7z/: run-bu9j6x7z.wandb
wandb/wandb/run-20260414_103507-pjy5vx8l/: run-pjy5vx8l.wandb
wandb/wandb/run-20260414_103525-e0jx4vlx/: run-e0jx4vlx.wandb
wandb/wandb/run-20260414_111305-j75tsm2f/: run-j75tsm2f.wandb
wandb/wandb/run-20260414_112918-3z7lwio6/: run-3z7lwio6.wandb
wandb/wandb/run-20260414_113352-tc7umkqv/: run-tc7umkqv.wandb
wandb/wandb/run-20260414_114405-fglkyx2o/: run-fglkyx2o.wandb
wandb/wandb/run-20260416_111725-0k221vtg/: run-0k221vtg.wandb
wandb/wandb/run-20260416_111815-xdc5suof/: run-xdc5suof.wandb
(+82 files in other folders)
